--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/transform-runtime"]  // <= Add it here
+    ["@babel/transform-runtime"]
   ]  
 }
